--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,10 @@ keywords = ["chess", "lichess"]
 
 [dependencies]
 axum = "0.4"
+clap = { version = "3.0.0-rc.4", features = ["derive"] }
 env_logger = "0.9.0"
 log = "0.4.14"
 reqwest = "0.11.8"
 serde = "1.0.132"
 tokio = { version = "1", features = ["full"] }
+tower-http = { version = "0.2", features = ["set-header"] }
