--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ axum = "0.4"
 clap = { version = "3.0.0-rc.4", features = ["derive"] }
 env_logger = "0.9"
 log = "0.4"
+moka = { version = "0.6.2", features = ["future"] }
 reqwest = "0.11"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
