--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ axum = "0.4"
 clap = { version = "3.0.0-rc.4", features = ["derive"] }
 env_logger = "0.9"
 log = "0.4"
-moka = { version = "0.6.2", features = ["future"] }
-reqwest = "0.11"
+moka = { version = "0.6", features = ["future"] }
+reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.2", features = ["set-header"] }
