--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ log = "0.4"
 moka = { version = "0.6", features = ["future"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
+thiserror = "1.0.30"
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.2", features = ["set-header"] }
