--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ moka = { version = "0.6", features = ["future"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.73"
+serde_with = "1.11.0"
 thiserror = "1.0.30"
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.2", features = ["set-header"] }
