--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap = { version = "3.0.0-rc.4", features = ["derive"] }
 env_logger = "0.9"
 log = "0.4"
 moka = { version = "0.6", features = ["future"] }
+mongodb = "2.1.0"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.73"
