--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,11 @@ keywords = ["chess", "lichess"]
 axum = "0.4"
 clap = { version = "3.0.0-rc.4", features = ["derive"] }
 env_logger = "0.9"
+futures = "0.3.19"
 log = "0.4"
 moka = { version = "0.6", features = ["future"] }
 mongodb = "2.1.0"
+redis = { version = "0.21.4", features = ["tokio-comp"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.73"
