--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ log = "0.4"
 moka = { version = "0.6", features = ["future"] }
 mongodb = "2.1.0"
 redis = { version = "0.21.4", features = ["tokio-comp"] }
-serde = { version = "1", features = ["derive"] }
+serde = { version = "1", features = ["derive", "rc"] }
 serde_json = "1.0.73"
 serde_with = "1.11.0"
 thiserror = "1.0.30"
