--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,17 +12,17 @@ categories = ["games"]
 keywords = ["chess", "lichess"]
 
 [dependencies]
-arrayvec = { version = "0.7.2", features = ["serde"] }
+arrayvec = { version = "0.7", features = ["serde"] }
 axum = "0.4"
-clap = { version = "3.0.0-rc.4", features = ["derive"] }
+clap = { version = "3", features = ["derive"] }
 env_logger = "0.9"
-futures = "0.3.19"
+futures = "0.3"
 log = "0.4"
-moka = { version = "0.6", features = ["future"] }
-redis = { version = "0.21.4", features = ["tokio-comp"] }
+moka = { version = "0.7", features = ["future"] }
+redis = { version = "0.21", features = ["tokio-comp"] }
 serde = { version = "1", features = ["derive", "rc"] }
-serde_json = "1.0.73"
-serde_with = "1.11.0"
-thiserror = "1.0.30"
+serde_json = "1"
+serde_with = "1"
+thiserror = "1"
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.2", features = ["set-header"] }
