--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,13 @@ axum-extra = { version = "0.1", features = ["erased-json"] }
 clap = { version = "3", features = ["derive"] }
 env_logger = "0.9"
 futures = "0.3"
+itertools = "0.10"
 log = "0.4"
 moka = { version = "0.7", features = ["future"] }
 redis = { version = "0.21", features = ["tokio-comp"] }
 serde = { version = "1", features = ["derive", "rc"] }
 serde_json = "1"
 serde_with = "1"
+thiserror = "1"
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.2", features = ["set-header"] }
