--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ log = "0.4"
 moka = { version = "0.7", features = ["future"] }
 redis = { version = "0.21", features = ["tokio-comp"] }
 serde = { version = "1", features = ["derive", "rc"] }
-serde_json = "1"
+serde_json = { version = "1", features = ["raw_value"] }
 serde_with = "1"
 thiserror = "1"
 tokio = { version = "1", features = ["full"] }
