--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ itertools = "0.10"
 log = "0.4"
 moka = { version = "0.7", features = ["future"] }
 redis = { version = "0.21", features = ["tokio-comp"] }
-serde = { version = "1", features = ["derive", "rc"] }
+serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", features = ["raw_value"] }
 serde_with = "1"
 thiserror = "1"
