--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ keywords = ["chess", "lichess"]
 
 [dependencies]
 arrayvec = { version = "0.7", features = ["serde"] }
-axum = "0.5"
-axum-extra = { version = "0.3", features = ["erased-json"] }
+axum = "0.6.0-rc.1"
+axum-extra = { version = "0.4.0-rc.1", features = ["erased-json"] }
 clap = { version = "3", features = ["derive"] }
 env_logger = "0.9"
 futures = "0.3"
