crate has one target and one feature set

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,4 +11,4 @@ jobs:
         with:
           components: clippy
       - run: cargo test
-      - run: cargo clippy --all-targets --all-features -- -D warnings
+      - run: cargo clippy -- -D warnings
