--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 license = "AGPL-3.0+"
 categories = ["games"]
 keywords = ["chess", "lichess"]
+build = "build.rs"
 
 [dependencies]
 arrayvec = { version = "0.7", features = ["serde"] }
@@ -28,3 +29,6 @@ serde_with = "3"
 thiserror = "1"
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.4", features = ["set-header"] }
+
+[build-dependencies]
+vergen = { version = "8.2.4", features = ["git", "gitcl"] }
