--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,29 @@
 [package]
 name = "lila-http"
-version = "0.1.0"
-edition = "2021"
 publish = false
 description = "handle some of the load of lichess.org/tournament"
 homepage = "https://lichess.org/tournament"
-repository = "https://github.com/ornicar/lila-http"
+repository = "https://github.com/lichess-org/lila-http"
 readme = "README.md"
 license = "AGPL-3.0+"
 categories = ["games"]
 keywords = ["chess", "lichess"]
+edition = "2021"
 
 [dependencies]
 arrayvec = { version = "0.7", features = ["serde"] }
-axum = "0.7"
-axum-extra = { version = "0.9", features = ["erased-json"] }
+axum = "0.8.0-rc.1"
+axum-extra = { version = "0.10.0-rc.1", features = ["erased-json"] }
 clap = { version = "4", features = ["derive", "deprecated"] }
-env_logger = "0.10"
+env_logger = "0.11"
 futures = "0.3"
-itertools = "0.12"
+itertools = "0.13"
 log = "0.4"
 moka = { version = "0.12", features = ["future"] }
-redis = { version = "0.24", features = ["tokio-comp"] }
+redis = { version = "0.27", features = ["aio", "tokio-comp"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_with = "3"
-thiserror = "1"
+thiserror = "2"
 tokio = { version = "1", features = ["full"] }
-tower-http = { version = "0.5", features = ["set-header"] }
+tower-http = { version = "0.6", features = ["set-header"] }
