--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,9 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_with = "3"
 thiserror = "2"
+tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.6", features = ["set-header"] }
+
+[profile.release]
+lto = true
