--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ clap = { version = "4", features = ["derive", "deprecated"] }
 env_logger = "0.11"
 futures = "0.3"
 itertools = "0.13"
+listenfd = "1"
 log = "0.4"
 moka = { version = "0.12", features = ["future"] }
 redis = { version = "0.27", features = ["aio", "tokio-comp"] }
