--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
       - run: cargo test
-      - run: cargo run --release
+      - run: cargo build --release
       - uses: actions/upload-artifact@v4
         with:
           name: lila-http
