--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,12 @@ edition = "2021"
 
 [dependencies]
 arrayvec = { version = "0.7", features = ["serde"] }
-axum = "0.8.0-rc.1"
-axum-extra = { version = "0.10.0-rc.1", features = ["erased-json"] }
+axum = "0.8"
+axum-extra = { version = "0.10", features = ["erased-json"] }
 clap = { version = "4", features = ["derive", "deprecated"] }
 env_logger = "0.11"
 futures = "0.3"
-itertools = "0.13"
+itertools = "0.14"
 listenfd = "1"
 log = "0.4"
 moka = { version = "0.12", features = ["future"] }
